v5, black img ch sh and pricing update

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1806,7 +1806,7 @@ section.lazy-placeholder:after {
 .cid-s2LJRhx0i2 {
   padding-top: 90px;
   padding-bottom: 90px;
-  background: linear-gradient(45deg, #0f7699, #cc2952);
+  background: linear-gradient(45deg, #2cfffe, #0066ff);
 }
 .cid-s2LJRhx0i2 .list-group-item {
   padding: .75rem 3.25rem;
