--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1457,7 +1457,7 @@ section.lazy-placeholder:after {
   color: #ffffff;
 }
 .cid-s2AQ0OQXw2 .countdown-cont {
-  background: linear-gradient(45deg, #ff3366, #0066ff);
+  background: linear-gradient(45deg, #ff3366, #232323);
   max-width: 700px;
   border-radius: 3px;
   margin: 0 auto;
